--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
 
-  <title>Happy Code Template</title>
+  <title>Barber Knights</title>
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
   </script>
